--- a/The hill/1. Frontend-sprint/4. NPM and packages manager/package.json
+++ b/The hill/1. Frontend-sprint/4. NPM and packages manager/package.json
@@ -1,11 +1,21 @@
 {
-  "name": "3.-npm-and-packages-manager",
+  "name": "4.-npm-and-packages-manager",
   "version": "1.0.0",
-  "description": "introduction to npm and package manager",
+  "description": "Introduction to npm and package manager",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx parcel ./src/index.html"
   },
   "author": "Nad",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "parcel": "^2.8.0"
+  },
+  "devDependencies": {
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10"
+  }
 }
