--- a/The hill/2. Backend-sprint/3. Lockerroom app/package.json
+++ b/The hill/2. Backend-sprint/3. Lockerroom app/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0"
   }
