--- a/The hill/2. Backend-sprint/3. Lockerroom app/package.json
+++ b/The hill/2. Backend-sprint/3. Lockerroom app/package.json
@@ -4,13 +4,15 @@
   "description": "creation of a plateform for teams to exchange informations",
   "main": "index.mjs",
   "scripts": {
-    "dev": "nodemon index.mjs",
+    "dev": "nodemon ./src/index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "igotyb",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
