--- a/The hill/2. Backend-sprint/4. MongoDB/package.json
+++ b/The hill/2. Backend-sprint/4. MongoDB/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./index.mjs"
+    "dev": "nodemon ./src/server.mjs"
   },
   "keywords": [],
   "author": "",
